--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -9,5 +9,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.11.1"
+  "packageManager": "pnpm@10.11.1",
+  "dependencies": {
+    "zod": "^4.1.12"
+  }
 }
