--- a/web/package.json
+++ b/web/package.json
@@ -6,25 +6,30 @@
     "build": "next build",
     "dev": "next dev",
     "start": "next start",
-    "postinstall": "fumadocs-mdx"
+    "types:check": "fumadocs-mdx && next typegen && tsc --noEmit",
+    "postinstall": "fumadocs-mdx",
+    "lint": "eslint"
   },
   "dependencies": {
-    "fumadocs-core": "16.0.11",
-    "fumadocs-mdx": "13.0.8",
-    "fumadocs-ui": "16.0.11",
-    "lucide-react": "^0.552.0",
+    "fumadocs-core": "16.5.1",
+    "fumadocs-mdx": "14.2.6",
+    "fumadocs-ui": "16.5.1",
+    "lucide-react": "^0.563.0",
     "next": "16.1.6",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.16",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/mdx": "^2.0.13",
-    "@types/node": "^24.10.0",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
+    "@types/node": "^25.1.0",
+    "@types/react": "^19.2.10",
+    "@types/react-dom": "^19.2.3",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.16",
-    "typescript": "^5.9.3"
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.9.3",
+    "eslint-config-next": "16.1.6",
+    "eslint": "^9.39.2"
   }
 }
